# git-tui

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  iwyu.imp
.github/workflows/: build.yaml  linux-clang.yaml  linux-gcc.yaml  mac-clang.yaml  release.yaml
cmake/: find_or_fetch_package.cmake
snap/: snapcraft.yaml
src/: diff.cpp  diff.hpp  environment.h.in  exec.cpp  exec.hpp  git.cpp  git.hpp  help.cpp  help.hpp  log.cpp  log.hpp  main.cpp  process.cpp  process.hpp  scroller.cpp  scroller.hpp  simple_button_options.hpp  version.cpp  version.hpp
tools/: format.sh  iwyu.sh
